2013-03-15  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todos.el: Item unarchiving fixes and improvements.
	(todos-archive-mode-map): Add bindings for item and category
	marking/unmarking; make todos-display-categories binding same as
	in Todos mode; remove todos-unarchive-category binding.
	(todos-unarchive-category): Remove.
	(todos-unarchive-items): Fix handling of marked items.  Remove
	code for unarchiving whole category, since that is covered by
	unarchiving marked items.  Handle unarchiving items to a category
	that had been deleted from the todo file by re-adding the
	category.  Use todos-category-select to display restored items,
	not todos-show.  Remove obsolete or superfluous code.

2013-03-15  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todos.el (todos-reset-prefix): Don't remove overlays,
	since it's superfluous and also wrongly removes items marks.
	(todos-category-completions): Select current category on visiting
	file, to ensure category is properly displayed if user switches to
	file via a non-Todos command.
	(todos-mark-category): Make implementation cleaner.
	(todos-unmark-category): Improve implementation.  Get overlay
	property only when there is an overlay.

2013-03-14  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todos.el (todos-insert-item): Fix last change to make
	sure calling insertion "here" from outside goal todo items section
	gives new item top priority.  With priority insertion, if user
	cancels before setting priority, restore display.
	(todos-find-item): Restore narrowing after searching.
	(todos-item-done): Allow adding (same) comment to marked items.
	Don't add empty comment to done item.

2013-03-13  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todos.el (todos-quit): If quitting
	todos-filtered-items-mode makes todos-mode current, don't call
	todos-show, which (here wrongly) prompts for a new Todos file.
	(todos-delete-category): Fix incorrect quotation mark.